--- a/yaml/backend-deployment.yaml
+++ b/yaml/backend-deployment.yaml
@@ -16,6 +16,6 @@ spec:
     spec:
       containers:
       - name: backend
-        image: INSERT_PATH_TO_DOCKER_IMAGE
+        image: gcr.io/fsb2016-1245/backend:cv-backend-2
         ports:
         - containerPort: 5000
